chore: add some initial support for recipe nodes
No renderer yet, but `!recipe(recipe-id)` syntax will create a recipe
block node